--- a/QuickSort.ipynb
+++ b/QuickSort.ipynb
@@ -26,7 +26,7 @@
     "        # recursion        \n",
     "        pivot_index = i-1\n",
     "            \n",
-    "        nums[start], nums[i-1] = nums[i-1], nums[start]\n",
+    "        nums[start], nums[pivot_index] = nums[pivot_index], nums[start]\n",
     "    \n",
     "        quick_sort(nums, start, pivot_index-1)\n",
     "        quick_sort(nums, pivot_index+1, end)\n",
